<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <!--<com.wubydax.romcontrol.v2.prefs.ImageHeaderPreference app:imageSource="@drawable/header" />-->

<!--
    <PreferenceCategory android:title="..######..########....###....########.##.....##..######..########.....###....########." />
    <PreferenceCategory android:title=".##....##....##......##.##......##....##.....##.##....##.##.....##...##.##...##.....##" />
    <PreferenceCategory android:title=".##..........##.....##...##.....##....##.....##.##.......##.....##..##...##..##.....##" />
    <PreferenceCategory android:title="..######.....##....##.....##....##....##.....##..######..########..##.....##.########." />
    <PreferenceCategory android:title=".......##....##....#########....##....##.....##.......##.##.....##.#########.##...##.." />
    <PreferenceCategory android:title=".##....##....##....##.....##....##....##.....##.##....##.##.....##.##.....##.##....##." />
    <PreferenceCategory android:title="..######.....##....##.....##....##.....#######...######..########..##.....##.##.....##" />
-->


    <PreferenceCategory android:title="6thGear Network Traffic Display" >
        <PreferenceScreen android:title="6thGear Network Traffic Display Options" >
            <PreferenceCategory android:title="Display" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference
                android:title="Displayed Traffic Info"
                android:key="network_traffic_state"
                android:defaultValue="0"
                android:entries="@array/traffic_state_items"
                android:entryValues="@array/traffic_state_values"
                app:dependentValue="0" />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                android:title="Data Display Type"
                android:key="network_traffic_unit"
                android:defaultValue="false"
                android:summaryOn="Displayed in Bytes"
                android:summaryOff="Displayed in Bits (default)"
                android:dependency="network_traffic_state" />
            <PreferenceCategory android:title="Arrows" />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                android:title="Show Arrows"
                android:key="network_traffic_show_arrows"
                android:defaultValue="true"
                android:summaryOn="Arrows Shown"
                android:summaryOff="Arrows Hidden"
                android:dependency="network_traffic_state" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference
                android:title="Arrows Position"
                android:key="network_traffic_arrows_position"
                android:defaultValue="0"
                android:entries="@array/arrow_position_entries"
                android:entryValues="@array/arrow_position_values"
                android:dependency="network_traffic_show_arrows" />
            <PreferenceCategory android:title="Autohide" />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                android:title="Autohide on Low Traffic"
                android:key="network_traffic_autohide"
                android:defaultValue="false"
                android:summaryOn="Autohide enabled"
                android:summaryOff="Displayed always"
                android:dependency="network_traffic_state" />
            <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
                android:title="Autohide Threshold"
                android:key="network_traffic_threshold"
                android:defaultValue="10"
                android:dependency="network_traffic_autohide"
                app:unitsValue="Kb"
                app:maxValue="100" />
            <PreferenceCategory android:title="Text" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference
                android:title="Font Style"
                android:key="network_traffic_text_style"
                android:defaultValue="0"
                android:entries="@array/traffic_style_entries"
                android:entryValues="@array/traffic_style_entry_values"
                android:dependency="network_traffic_state" />
            <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
                android:title="Text Size Scale Factor"
                android:key="network_traffic_scale"
                android:defaultValue="8"
                app:maxValue="10"
                android:dependency="network_traffic_state" />
            <PreferenceCategory
                android:title="Network Traffic Colors"
                android:dependency="network_traffic_state">
                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                    android:title="Separate Colors for Elements"
                    android:key="network_traffic_global_color"
                    android:defaultValue="true"
                    android:summaryOn="All elements can be colored separately"
                    android:summaryOff="Global color will apply to all elements"/>
                <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
                    android:title="Global Color"
                    android:key="network_traffic_color"
                    android:defaultValue="#ffffff"/>
                <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
                    android:title="Upload Text Color"
                    android:defaultValue="#ffffff"
                    android:key="network_traffic_upload_color"
                    android:dependency="network_traffic_global_color"/>
                <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
                    android:title="Download Text Color"
                    android:defaultValue="#ffffff"
                    android:key="network_traffic_download_color"
                    android:dependency="network_traffic_global_color"/>
                <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
                    android:title="Traffic Arrows Color"
                    android:key="network_traffic_arrow_color"
                    android:defaultValue="#ffffff"
                    android:dependency="network_traffic_global_color"/>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/dynamic_status_bar_title" >
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:title="Dynamic StatusBar Color"
            android:key="dynamic_toggle"
            android:defaultValue="true"
            android:summaryOn="Dynamic StatusBar features Enabled"
            android:summaryOff="Dynamic StatusBar features Disabled" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:title="@string/dynamic_status_bar_gradient_title"
            android:key="dynamic_status_bar_gradient_state"
            android:defaultValue="0"
            android:summary="@string/dynamic_status_bar_gradient_summary"
            android:entries="@array/dsb_gradient_filter_entries"
            android:entryValues="@array/dsb_gradient_filter_values"
            android:dependency="dynamic_toggle" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:title="@string/dynamic_status_bar_filter_title"
            android:key="dynamic_status_bar_filter_state"
            android:defaultValue="0"
            android:summary="@string/dynamic_status_bar_filter_summary"
            android:entries="@array/dsb_gradient_filter_entries"
            android:entryValues="@array/dsb_gradient_filter_values"
            android:dependency="dynamic_toggle" />
        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
            android:title="@string/dynamic_status_bar_filter_value"
            android:key="dynamic_status_bar_filter_value"
            android:defaultValue="25"
            app:minValue="0"
            app:maxValue="70"
            android:dependency="dynamic_toggle" />
    </PreferenceCategory>

<!--    <PreferenceCategory android:title="Simple NetSpeed Indicator" >
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:title="Upload / Download Speed"
            android:key="tweaks_speed_view"
            android:summaryOn="Enabled"
            android:summaryOff="Disabled" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:title="Upload Speed Color"
            android:key="tweaks_speed_color_upload"
            android:summary="Choose upload speed color"
            android:defaultValue="#ffffffff"
            android:dependency="tweaks_speed_view" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:title="Download Speed Color"
            android:key="tweaks_speed_color_download"
            android:summary="Choose download speed color"
            android:defaultValue="#ffffffff"
            android:dependency="tweaks_speed_view" />
    </PreferenceCategory>-->

    <PreferenceCategory android:title="Signal Icons Left or Right" >
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:title="Signal Position"
            android:defaultValue="0"
            android:key="leftsignal"
            android:entries="@array/SignalPositionName"
            android:entryValues="@array/SignalPositionValue" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Invisible Virtual Buttons" >
        <PreferenceScreen android:title="Lock Button" >
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference
                android:title="Right Side"
                android:key="cocoyaya_rightcornerlock"
                android:defaultValue="false"
                android:summaryOn="On"
                android:summaryOff="Off" />
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference
                android:title="Center"
                android:key="cocoyaya_centerlock"
                android:defaultValue="false"
                android:summaryOn="On"
                android:summaryOff="Off" />
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference
                android:title="Left Side"
                android:key="cocoyaya_leftcornerlock"
                android:defaultValue="false"
                android:summaryOn="On"
                android:summaryOff="Off" />
        </PreferenceScreen>
        <PreferenceScreen android:title="Home Button" >
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference
                android:title="Right Side"
                android:key="cocoyaya_rightcornerhome"
                android:defaultValue="false"
                android:summaryOn="On"
                android:summaryOff="Off" />
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference
                android:title="Center"
                android:key="cocoyaya_centerhome"
                android:defaultValue="false"
                android:summaryOn="On"
                android:summaryOff="Off" />
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference
                android:title="Left Side"
                android:key="cocoyaya_leftcornerhome"
                android:defaultValue="false"
                android:summaryOn="On"
                android:summaryOff="Off" />
        </PreferenceScreen>
        <PreferenceScreen android:title="Recent Button" >
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference
                android:title="Right Side"
                android:key="cocoyaya_rightcornertask"
                android:defaultValue="false"
                android:summaryOn="On"
                android:summaryOff="Off" />
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference
                android:title="Center"
                android:key="cocoyaya_centertask"
                android:defaultValue="false"
                android:summaryOn="On"
                android:summaryOff="Off" />
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference
                android:title="Left Side"
                android:key="cocoyaya_leftcornertask"
                android:defaultValue="false"
                android:summaryOn="On"
                android:summaryOff="Off" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="Virtual Lock Button Right (Alternative to Invisible)" >
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:title="Turn On/Off"
            android:key="VirtualLockRight"
            android:defaultValue="false"
            android:summaryOn="On"
            android:summaryOff="Off" />
    </PreferenceCategory>

    <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
        app:componentName="com.potato.clock.main/com.potato.clock.main.Main"/>


    <PreferenceCategory android:title="Battery" >
        <PreferenceScreen android:title="Battery Options" >

            <PreferenceCategory android:title="Battery Style" >
                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                    android:title="Stock Battery"
                    android:key="hide_battery_stock"
                    android:defaultValue="false"
                    android:summaryOn="Show"
                    android:summaryOff="Hide" />
                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                    android:title="Display inBattery Percentage"
                    android:key="status_bar_show_battery_percent"
                    android:defaultValue="true"
                    android:summaryOn="Show"
                    android:summaryOff="Hide" />
                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                    android:title="Display Percentage"
                    android:key="display_battery_percentage"
                    android:defaultValue="false"
                    android:summaryOn="Show"
                    android:summaryOff="Hide" />
                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                    android:title="3Minit Battery"
                    android:key="minit_battery_visible"
                    android:defaultValue="true"
                    android:summaryOn="Show"
                    android:summaryOff="Hide" />
            </PreferenceCategory>
            <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
                app:componentName="com.three.minit.minitbatterysettings.free/com.three.minit.minitbatterysettings.MainActivity"/>
            <PreferenceCategory android:title="Battery Bar" >
                <com.wubydax.romcontrol.v2.prefs.MyListPreference
                    android:title="Show / Hide Battery Bar"
                    android:key="battery_bar"
                    android:defaultValue="2"
                    android:summary="%s"
                    android:entries="@array/battery_bar_entries"
                    android:entryValues="@array/battery_bar_values" />
                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                    android:title="Enable Down Below on Pulldown / Lockscreen"
                    android:key="battbar_no_pulldown_below"
                    android:defaultValue="false"
                    android:summaryOn="Down Below shown everywhere"
                    android:summaryOff="Down Below hidden from pulldown / lockscreen" />
                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                    android:title="Battery Bar Animation"
                    android:key="battery_bar_animate"
                    android:defaultValue="true"
                    android:summaryOn="Enabled"
                    android:summaryOff="Disabled" />
                <com.wubydax.romcontrol.v2.prefs.MyListPreference
                    android:title="Battery Bar Style"
                    android:key="battery_bar_style"
                    android:summary="%s"
                    android:defaultValue="1"
                    android:entries="@array/battery_bar_style_entries"
                    android:entryValues="@array/battery_bar_style_values" />
                <com.wubydax.romcontrol.v2.prefs.MyListPreference
                    android:title="Thickness of Battery Bar"
                    android:key="battery_bar_thickness"
                    android:defaultValue="1"
                    android:summary="%s"
                    android:entries="@array/battery_bar_thickness_entries"
                    android:entryValues="@array/battery_bar_thickness_values" />
                <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
                    android:title="Battery Bar Color"
                    android:key="battery_bar_color"
                    android:summary="Choose battery bar color"
                    android:defaultValue="#1eb600"
                    android:dependency="battery_bar" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="Statusbar Icons Color" >
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:title="Use Global Color"
            android:key="sb_global_toggle"
            android:defaultValue="false"
            android:summaryOn="Enabled"
            android:summaryOff="Disabled"
            app:packageNameToKill="com.android.systemui"
            app:isSilent="false" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:title="Statusbar Global Color"
            android:key="sb_global_color"
            android:defaultValue="#ffffffff"
            android:summary="Choose universal color"
            android:dependency="sb_global_toggle"
            app:packageNameToKill="com.android.systemui"
            app:isSilent="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Individual Statusbar Icon Colors" >
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:title="WiFi Icon Color"
            android:key="statusbar_wifi_color"
            android:defaultValue="#ffffffff"
            android:summary="Choose color of wifi icon"
            app:packageNameToKill="com.android.systemui"
            app:isSilent="false" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:title="Signalbar Icon Color"
            android:key="statusbar_signal_color"
            android:defaultValue="#ffffffff"
            android:summary="Choose color of signalbars" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:title="Data Icon Color"
            android:key="statusbar_data_color"
            android:defaultValue="#ffffffff"
            android:summary="Choose color of 3G/4G/LTE data icon"
            app:packageNameToKill="com.android.systemui"
            app:isSilent="false" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:title="Notification Icons Color"
            android:key="statusbar_icon_color"
            android:defaultValue="#ffffffff"
            android:summary="Choose color of volume, bluetooth, popups, etc.."
            app:packageNameToKill="com.android.systemui"
            app:isSilent="false" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:title="Battery Percentage Color"
            android:key="battery_text_color"
            android:defaultValue="#ffffffff"
            android:summary="Choose color of battery percentage" />
    </PreferenceCategory>



</PreferenceScreen>